# terminal-flappy-bird

./: INSTALL.md  README.md  TODO.md
src/: CMakeLists.txt  CMakePresets.json  TODO.md  backgroundGen.cpp  colors.cpp  flappy-bird.1  main.cpp  moreAssertions.cpp  run.sh  sextantBlocks.cpp  test.cpp  types.cpp
